# practice_d3d12

./: Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs
