[package]
name = "practice_d3d12"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
version = "0.37.0"
features = [
    "alloc",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]